--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="wrap">
     <header>Registro UCI · IPS</header>
     <div class="hint">Si no carga, verifique conectividad o permisos del Web App de Google.</div>
-    <iframe class="frame" src="GAS_WEB_APP_URL" referrerpolicy="no-referrer-when-downgrade" allowfullscreen></iframe>
+    <iframe class="frame" src="https://script.google.com/macros/s/AKfycbwP2Ppa_f4yxQRugAnlPvXxKW_NhcqBzeulpt0E0LQW3GYtg1ZRGpFXmWON4y-OPaqNFw/exec" referrerpolicy="no-referrer-when-downgrade" allowfullscreen></iframe>
   </div>
 </body>
 </html>
